add filters, admin can view users and fix bug on admin middleware
